fixed issue with angular build added image tile back, not sure how it got removed? fixed issue with tiles overlapping each other due to css

--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -12,7 +12,7 @@
 }
 .card-style{
     width:80%;
-    height: 200px!important;
+    min-height: 200px!important;
     margin-right: 20px;
     position: relative;
  }
